Fix color contrast error

--- a/public/css/frdr-theme.css
+++ b/public/css/frdr-theme.css
@@ -2839,9 +2839,9 @@ a.external-link:after {
 
 /* Fix web accessibility color contrast error */
 .badge-primary {
-    color: #0070f2;
+    background-color: #0070f2 !important;
 }
 
 .bg-success {
-    background-color: #008828;
+    background-color: #008828 !important;
 }
